# advent-of-code-18

./: .gitignore  README.md  main.rs.template
.github/workflows/: ci.yml  readme-stars.yml
2018/aoc2018-01/: Cargo.toml
2018/aoc2018-02/: Cargo.toml
2018/aoc2018-03/: Cargo.toml
2018/aoc2018-04/: Cargo.toml
2018/aoc2018-05/: Cargo.toml
2018/aoc2018-06/: Cargo.toml
2018/aoc2018-07/: Cargo.toml
2019/: Cargo.toml
2019/aoc2019-01/: Cargo.toml
2019/aoc2019-02/: Cargo.toml
2019/aoc2019-03/: Cargo.toml
2019/aoc2019-04/: Cargo.toml
2019/aoc2019-05/: Cargo.toml
2019/aoc2019-06/: Cargo.toml
2020/: Cargo.toml
2020/aoc2020-01/: Cargo.toml
2020/aoc2020-01/src/: main.rs
2020/aoc2020-02/: Cargo.toml
2020/aoc2020-02/src/: main.rs
2020/aoc2020-03/: Cargo.toml
2020/aoc2020-03/src/: main.rs
2020/aoc2020-04/: Cargo.toml
2020/aoc2020-04/src/: main.rs
2020/aoc2020-05/: Cargo.toml
2020/aoc2020-05/src/: main.rs
2020/aoc2020-06/: Cargo.toml
2020/aoc2020-06/src/: main.rs
2020/aoc2020-07/: Cargo.toml
2020/aoc2020-07/src/: main.rs
2020/aoc2020-08/: Cargo.toml
2020/aoc2020-08/src/: main.rs
2020/aoc2020-09/: Cargo.toml
2020/aoc2020-09/src/: main.rs
2020/aoc2020-10/: Cargo.toml
2020/aoc2020-10/src/: main.rs
2020/aoc2020-template/: Cargo.toml
2020/aoc2020-template/src/: main.rs
2020/src/: input.rs  lib.rs
2022/: Cargo.toml  README.md
2022/src/: helpers.rs  lib.rs  main.rs
2022/src/examples/: 09-2.txt
aoc07/: Cargo.toml
aoc2018-01/: Cargo.toml
aoc2018-02/: Cargo.toml
aoc2018-05/: Cargo.toml
aoc2018-06/: Cargo.toml
(+28 files in other folders)
