[package]
name = "aoc2022"
version = "0.1.0"
authors = ["David Govea <govea.d@gmail.com>"]
edition = "2021"
default-run = "aoc2022"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
lazy_static = "1.4.0"
regex = "1"
nom = "7.1.1"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
